--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container" id="topArea">
-      <a id="logo-container" href="#" class="brand-logo">
+      <a id="logo-container" href="./index.html" class="brand-logo">
         <img src="./images/logo2.png" style="width: 40px; height: 50px; padding-top: 10px;" >
         <!-- todo CW fix this behavior and likely resize image ^^ -->
       </a>
@@ -38,21 +38,18 @@
   </nav>
 
   <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
+    <div class="section no-pad-bot" style="padding-top: 80px;">
       <div class="container">
         <br><br>
-        <h3 class="header center black-text text-lighten-2">Planet BioTechnology INC</h3>
+        <h3 class="header center black-text text-lighten-2 whiteOutline">Planet BioTechnology INC</h3>
         <div class="row center">
-          <h5 class="header col s12 black-text">Your Plantibody Company</h5>
-        </div>
-        <div class="row center">
-          <!-- <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a> -->
+          <h5 class="header col s12 black-text whiteOutline">Your Plantibody Company</h5>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="images/lab-plants-resize.jpeg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="images/plants1-resize.jpg" alt="plants"></div>
   </div>
 
 
