--- a/public/publications.html
+++ b/public/publications.html
@@ -69,7 +69,7 @@
                 <p class="light center-align">Novel therapeutics against the global threat of multidrug-resistant Neisseria gonorrhoeae (Ng) are urgently needed. Gonococci possess several mechanisms to evade killing by human complement, including binding of factor H (FH), a key inhibitor of the alternative pathway. FH comprises 20 short consensus repeat (SCR) domains organized in a head-to-tail manner as a single chain. N. gonorrhoeae binds two regions in FH; domains 6 and 7 and domains 18 through 20. We designed a novel anti-infective immunotherapeutic molecule that fuses domains 18-20 of FH containing a D-to-G mutation in domain 19 at position 1119 (called FH*) with human IgG1 Fc. FH*/Fc retained binding to gonococci but did not lyse human erythrocytes. Expression of FH*/Fc in tobacco plants was undertaken as an alternative, economical production platform. FH*/Fc was expressed in high yields in tobacco plants (300-600 mg/kg biomass). The activities of plant- and CHO-cell produced FH*/Fc against gonococci were similar in vitro and in the mouse vaginal colonization model of gonorrhea. The addition of flexible linkers [e.g., (GGGGS)2 or (GGGGS)3] between FH* and Fc improved the bactericidal efficacy of FH*/Fc 2.7-fold. The linkers also improved PMN-mediated opsonophagocytosis about 11-fold. FH*/Fc with linker also effectively reduced the duration and burden of colonization of two gonococcal strains tested in mice. FH*/Fc lost efficacy: i) in C6 -/- mice (no terminal complement) and ii) when Fc was mutated to abrogate complement activation, suggesting that an intact complement was necessary for FH*/Fc function in vivo. In summary, plant-produced FH*/Fc represent promising prophylactic or adjunctive immunotherapeutics against multidrug-resistant gonococci.</p>
                 <!-- <div class="center-align clickableImage "> <a class="modal-trigger " href="#modal1" ><img src="./images/figure1.png" style="max-width: 30%;"/></a></div> -->
                 <br>
-                <div class="center-align"><h6><a  class ="linkEffect" href="https://www.frontiersin.org/articles/10.3389/fimmu.2020.583305/abstract" target="_blank">PDF HERE</a></h6></div>
+                <!-- <div class="center-align"><h6><a  class ="linkEffect" href="https://www.frontiersin.org/articles/10.3389/fimmu.2020.583305/abstract" target="_blank">PDF HERE</a></h6></div> -->
               </div>
           </div>
           <!--  -->
@@ -84,12 +84,29 @@
         </div>
 
         <div class="col s12 m6">
-          <h4 class="center-align">October 2015</h4>
-            <h5 class="light center-align">Anti‐infective immunoadhesins from plants</h5>
-            <p class="light center-align">Immunoadhesins are recombinant proteins that combine the ligand‐binding region of a receptor or adhesion molecule with immunoglobulin constant domains. All FDA‐approved immunoadhesins are designed to modulate the interaction of a human receptor with its normal ligand, such as Etanercept (Enbrel®), which interferes with the binding of tumour necrosis factor (TNF) to the TNF‐alpha receptor and is used to treat inflammatory diseases such as rheumatoid arthritis. Like antibodies, immunoadhesins have long circulating half‐lives, are readily purified by affinity‐based methods and have the avidity advantages conferred by bivalency. Immunoadhesins that incorporate normal cellular receptors for viruses or bacterial toxins hold great, but as yet unrealized, potential for treating infectious disease. As decoy receptors, immunoadhesins have potential advantages over pathogen‐targeted monoclonal antibodies. Planet Biotechnology has specialized in developing anti‐infective immunoadhesins using plant expression systems. An immunoadhesin incorporating the cellular receptor for anthrax toxin, CMG2, potently blocks toxin activity in vitro and protects animals against inhalational anthrax. An immunoadhesin based on the receptor for human rhinovirus, ICAM‐1, potently blocks infection of human cells by one of the major causes of the common cold. An immunoadhesin targeting the MERS coronavirus is in an early stage of development. We describe here the unique challenges involved in designing and developing immunoadhesins targeting infectious diseases in the hope of inspiring further research into this promising class of drugs. </p>
+          <!-- <h4 class="center-align">October 2015</h4>
+            <h5 class="light center-align">Anti‐infective immunoadhesins from plants</h5> -->
+
+            <ul class="collapsible">
+              <li>
+                <div class="collapsible-header">
+                  <div>
+                  <h4 class="center-align">October 2015</h4>
+                  <h5 class="light center-align">Anti‐infective immunoadhesins from plants </h5> 
+                  </div>
+                  <i class="material-icons">zoom_in</i>
+
+                </div>
+                <div class="collapsible-body"><p class="light center-align">Immunoadhesins are recombinant proteins that combine the ligand‐binding region of a receptor or adhesion molecule with immunoglobulin constant domains. All FDA‐approved immunoadhesins are designed to modulate the interaction of a human receptor with its normal ligand, such as Etanercept (Enbrel®), which interferes with the binding of tumour necrosis factor (TNF) to the TNF‐alpha receptor and is used to treat inflammatory diseases such as rheumatoid arthritis. Like antibodies, immunoadhesins have long circulating half‐lives, are readily purified by affinity‐based methods and have the avidity advantages conferred by bivalency. Immunoadhesins that incorporate normal cellular receptors for viruses or bacterial toxins hold great, but as yet unrealized, potential for treating infectious disease. As decoy receptors, immunoadhesins have potential advantages over pathogen‐targeted monoclonal antibodies. Planet Biotechnology has specialized in developing anti‐infective immunoadhesins using plant expression systems. An immunoadhesin incorporating the cellular receptor for anthrax toxin, CMG2, potently blocks toxin activity in vitro and protects animals against inhalational anthrax. An immunoadhesin based on the receptor for human rhinovirus, ICAM‐1, potently blocks infection of human cells by one of the major causes of the common cold. An immunoadhesin targeting the MERS coronavirus is in an early stage of development. We describe here the unique challenges involved in designing and developing immunoadhesins targeting infectious diseases in the hope of inspiring further research into this promising class of drugs. </p>
+                </div>
+              </li>
+              </ul>
+
+
+            <!-- <p class="light center-align">Immunoadhesins are recombinant proteins that combine the ligand‐binding region of a receptor or adhesion molecule with immunoglobulin constant domains. All FDA‐approved immunoadhesins are designed to modulate the interaction of a human receptor with its normal ligand, such as Etanercept (Enbrel®), which interferes with the binding of tumour necrosis factor (TNF) to the TNF‐alpha receptor and is used to treat inflammatory diseases such as rheumatoid arthritis. Like antibodies, immunoadhesins have long circulating half‐lives, are readily purified by affinity‐based methods and have the avidity advantages conferred by bivalency. Immunoadhesins that incorporate normal cellular receptors for viruses or bacterial toxins hold great, but as yet unrealized, potential for treating infectious disease. As decoy receptors, immunoadhesins have potential advantages over pathogen‐targeted monoclonal antibodies. Planet Biotechnology has specialized in developing anti‐infective immunoadhesins using plant expression systems. An immunoadhesin incorporating the cellular receptor for anthrax toxin, CMG2, potently blocks toxin activity in vitro and protects animals against inhalational anthrax. An immunoadhesin based on the receptor for human rhinovirus, ICAM‐1, potently blocks infection of human cells by one of the major causes of the common cold. An immunoadhesin targeting the MERS coronavirus is in an early stage of development. We describe here the unique challenges involved in designing and developing immunoadhesins targeting infectious diseases in the hope of inspiring further research into this promising class of drugs. </p> -->
             <!-- <div class="center-align clickableImage "> <a class="modal-trigger " href="#modal1" ><img src="./images/figure1.png" style="max-width: 30%;"/></a></div> -->
             <br>
-            <div class="center-align"><h6><a  class ="linkEffect" href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/pbi.12441" target="_blank">PDF HERE</a></h6></div>
+            <!-- <div class="center-align"><h6><a  class ="linkEffect" href="https://onlinelibrary.wiley.com/doi/epdf/10.1111/pbi.12441" target="_blank">PDF HERE</a></h6></div> -->
           </div>
       </div>
     </div>
@@ -107,6 +124,8 @@
        
       </div>
     </div>
+
+
 
   <footer class="page-footer teal">
     <!-- <div class="container" id="contactArea">
@@ -134,6 +153,8 @@
         </div>
       </div>
     </div> -->
+
+
     <div class="footer-copyright">
       <div class="container">
         <p>&copy; PBI 1998-<span id="date"></span></p>
