--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <script src="js/scrollreveal.min.js"></script>
 </head>
 <body>
   <div class="navbar-fixed">
@@ -60,7 +61,7 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <div class="col s12 m4">
+        <div class="col s12 m4 firstCol">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">group</i></h2>
             <h5 class="center">Who are we?</h5>
@@ -69,7 +70,7 @@
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m4 secondCol">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Our Technology</h5>
@@ -79,7 +80,7 @@
           </div>
         </div>
 
-        <div class="col s12 m4">
+        <div class="col s12 m4 thirdCol">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
             <h5 class="center">Exeptional Yields</h5>
@@ -108,7 +109,7 @@
     <div class="section">
 
        <div class="row">
-        <div class="col s12 m6">
+        <div class="col s12 m6 firstCol">
           <div class="icon-block">
             <h2 class="center green-text"><i class="material-icons">science</i></h2>
             <h5 class="center">Protein Synthesis</h5>
@@ -127,7 +128,7 @@
           </div>
         </div> -->
 
-        <div class="col s12 m6">
+        <div class="col s12 m6 secondCol">
           <div class="icon-block">
             <h2 class="center green-text"><i class="material-icons">whatshot</i></h2>
             <h5 class="center">Emerging Diseases</h5>
@@ -153,48 +154,50 @@
   </div>
 
   <footer class="page-footer teal">
-    <div class="container" id="contactArea">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Please Reach Out</h5>
-          <p class="grey-text text-lighten-4">We welcome any inquiries, including requests for more information, employment or investment opportunities at Planet Biotechnology or comments about our website.
-          </p>
+    <div class="footerContent">
+      <div class="container" id="contactArea">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Please Reach Out</h5>
+            <p class="grey-text text-lighten-4">We welcome any inquiries, including requests for more information, employment or investment opportunities at Planet Biotechnology or comments about our website.
+            </p>
 
 
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Location</h5>
-          Planet Biotechnology Inc.
-          20980 Corsair Blvd.
-          Hayward, California 94545
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="https://www.linkedin.com/company/planet-biotechnology-inc./"><img src="./images/LI-Logo.png" height="25px" width="110px"></a></li>
-            <br>
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Location</h5>
+            Planet Biotechnology Inc.
+            20980 Corsair Blvd.
+            Hayward, California 94545
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Connect</h5>
+            <ul>
+              <li><a class="white-text" href="https://www.linkedin.com/company/planet-biotechnology-inc./"><img src="./images/LI-Logo.png" height="25px" width="110px"></a></li>
+              <br>
 
-            <li><a class="noStyle" href="tel:510-887-1461">(510) 887-1461</a></li>
-            <br>
-            <li><a href="mailto:info@planetbiotechnology.com" class= "noStyle" >info@planetbiotechnology.com</a></li>
-            <!-- <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li> -->
-          </ul>
+              <li><a class="noStyleg" href="tel:510-887-1461">(510) 887-1461</a></li>
+              <br>
+              <li><a href="mailto:info@planetbiotechnology.com" class= "noStyle" >info@planetbiotechnology.com</a></li>
+              <!-- <li><a class="white-text" href="#!">Link 3</a></li>
+              <li><a class="white-text" href="#!">Link 4</a></li> -->
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-        <p>&copy; PBI 1998-<span id="date"></span></p>
-        <script>
-            n =  new Date();
-            y = n.getFullYear();
-            m = n.getMonth() + 1;
-            d = n.getDate();
-            console.log(y,m,d);
-            console.log(n.toString())
-            document.getElementById("date").innerHTML = y;
-        </script>
+      <div class="footer-copyright">
+        <div class="container">
+          <p>&copy; PBI 1998-<span id="date"></span></p>
+          <script>
+              n =  new Date();
+              y = n.getFullYear();
+              m = n.getMonth() + 1;
+              d = n.getDate();
+              console.log(y,m,d);
+              console.log(n.toString())
+              document.getElementById("date").innerHTML = y;
+          </script>
+        </div>
       </div>
     </div>
   </footer>
